--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.0",
+    "tellurium>=2.2.11.2",
     "umap-learn>=0.5.9.post2",
     "xgboost>=3.1.2",
 ]
